refactor(editor): 优化编辑器资源释放机制并更新项目配置
- 在EditorManager中添加releaseMap方法清理所有编辑器相关缓存映射
- 重命名MainController中的releaseTimer为release方法并统一调用
- 在应用关闭时调用EditorManager.releaseMap清理编辑器状态
- 更新pom.xml中的应用名称从AI编辑器改为CoreCreator
- 修改打包配置中的最终文件名和应用名称
- 更新README.md中的项目标题和图标描述
- 添加详细的项目构建说明和jpackage配置命令